PythonFundamentals/Chapter02a.txt
Last login: Mon Mar 22 09:41:41 on ttys027
~ ❯❯❯ python3
Python 3.9.2 (default, Mar 15 2021, 10:13:36) 
[Clang 12.0.0 (clang-1200.0.32.29)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 2+2
4
>>> 6*7
42
>>> x = 5
>>> x
5
>>> 3 * x
15
>>> _
15
>>> _ * 2
30
>>> 
~ ❯❯❯ python3
Python 3.9.2 (default, Mar 15 2021, 10:13:36) 
[Clang 12.0.0 (clang-1200.0.32.29)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> for i in range(5):
... print(i)
  File "<stdin>", line 2
    print(i)
    ^
IndentationError: expected an indented block
>>>     print(i)
  File "<stdin>", line 1
    print(i)
IndentationError: unexpected indent
>>> for i in range(5):
...     x = i * 10
...     print(x)
... 
0
10
20
30
40
>>> 
~ ❯❯❯ cls

~ ❯❯❯ which python3
/opt/homebrew/bin/python3
~ ❯❯❯ python3 --version
Python 3.9.2
~ ❯❯❯ python3
Python 3.9.2 (default, Mar 15 2021, 10:13:36) 
[Clang 12.0.0 (clang-1200.0.32.29)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import math
>>> math.sqrt(81)
9.0
>>> help(math)
Help on module math:

NAME
    math

DESCRIPTION
    This module provides access to the mathematical functions
    defined by the C standard.

FUNCTIONS
    acos(x, /)
        Return the arc cosine (measured in radians) of x.
        
        The result is between 0 and pi.
    
    acosh(x, /)
        Return the inverse hyperbolic cosine of x.
    
    asin(x, /)
        Return the arc sine (measured in radians) of x.
        
        The result is between -pi/2 and pi/2.
    
    asinh(x, /)
    asinh(x, /)
        Return the inverse hyperbolic sine of x.
    
    atan(x, /)
        Return the arc tangent (measured in radians) of x.
        
        The result is between -pi/2 and pi/2.
    
    atan2(y, x, /)
        Return the arc tangent (measured in radians) of y/x.
        
        Unlike atan(y/x), the signs of both x and y are considered.
    
    atanh(x, /)
        Return the inverse hyperbolic tangent of x.
    
    ceil(x, /)
        Return the ceiling of x as an Integral.
        
        This is the smallest integer >= x.
    
    comb(n, k, /)
        Number of ways to choose k items from n items without repetition and wit
        
        Evaluates to n! / (k! * (n - k)!) when k <= n and evaluates
        to zero when k > n.
        
        Also called the binomial coefficient because it is equivalent
        to the coefficient of k-th term in polynomial expansion of the
        expression (1 + x)**n.
        
        Raises TypeError if either of the arguments are not integers.
        Raises ValueError if either of the arguments are negative.
    
    copysign(x, y, /)
        Return a float with the magnitude (absolute value) of x but the sign of 
        
        On platforms that support signed zeros, copysign(1.0, -0.0)
        returns -1.0.
    
    cos(x, /)
        Return the cosine of x (measured in radians).
    
    cosh(x, /)
        Return the hyperbolic cosine of x.
    
    degrees(x, /)
        Convert angle x from radians to degrees.
    
    dist(p, q, /)
        Return the Euclidean distance between two points p and q.
        
        The points should be specified as sequences (or iterables) of
        coordinates.  Both inputs must have the same dimension.
        
        Roughly equivalent to:
            sqrt(sum((px - qx) ** 2.0 for px, qx in zip(p, q)))
    
    erf(x, /)
        Error function at x.
    
    erfc(x, /)
        Complementary error function at x.
    
    exp(x, /)
        Return e raised to the power of x.
    
    expm1(x, /)
        Return exp(x)-1.
        
        This function avoids the loss of precision involved in the direct evalua
    
    fabs(x, /)
        Return the absolute value of the float x.
    
    factorial(x, /)
        Find x!.
        
        Raise a ValueError if x is negative or non-integral.
    
    floor(x, /)
        Return the floor of x as an Integral.
        
        This is the largest integer <= x.
    
    fmod(x, y, /)
        Return fmod(x, y), according to platform C.
        
        x % y may differ.
    
    frexp(x, /)
        Return the mantissa and exponent of x, as pair (m, e).
    
    factorial(x, /)
        Find x!.
        
        Raise a ValueError if x is negative or non-integral.
    
    floor(x, /)
        Return the floor of x as an Integral.
        
        This is the largest integer <= x.
    
    fmod(x, y, /)
        Return fmod(x, y), according to platform C.
        
        x % y may differ.
    
    frexp(x, /)
        Return the mantissa and exponent of x, as pair (m, e).
        
        m is a float and e is an int, such that x = m * 2.**e.
        If x is 0, m and e are both 0.  Else 0.5 <= abs(m) < 1.0.
    
    fsum(seq, /)

>>> help(factorial)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'factorial' is not defined
>>> help(math.factorial)
Help on built-in function factorial in module math:

factorial(x, /)
    Find x!.
    
    Raise a ValueError if x is negative or non-integral.

>>> 
>>> math.factorial(5)
120
>>> math.factorial(13)
6227020800
>>> math.factorial(25)
15511210043330985984000000
>>> math.factorial(425)
15977543825580449039059028491802903127380338791863483049128370991067108396625766050267688895710574429084998108101039700641517381873763319601028149484002114693798393699491396328947757831366620306555297082031175675213705798463163227066295062015432599288847760596340315258786855260497719902961743066792834934241285332466334330976532707258804959387324668690208796476945391790915591031353635928193404280314886136458335477631166936908618143948819872191817526972357414781307615320059024031912964120178430314558792157725588006914593404752298568543044309034599056012503965564056636054142381603688108699830585169089536136973697948594333529771072449681268640636424890253957698622305602915377337745834781001890868690302403007357837222872688402785347907470873020865015995233051392945984572795828503249504365669280534212772911921618337423949824000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
>>> math.factorial(65)
8247650592082470666723170306785496252186258551345437492922123134388955774976000000000000000
>>> math.factorial(54)
230843697339241380472092742683027581083278564571807941132288000000000000
>>> math.factorial(51)
1551118753287382280224243016469303211063259720016986112000000000000
>>> n = 5
>>> k = 3
>>> math.factorial(n) / (math.factorial(k) * math.factorial(n-k))
10.0
>>> from math import factorial as fac
>>> fac(5)
120
>>> fac(n) // (fac(k) * fac(n-k))
10
>>> 2**31-1
2147483647
>>> fac(12)
479001600
>>> fac(13)
6227020800
>>> 
